Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ node app.js
 <li>A Reddit App</li>
 </ol>
 
-<p><img src="https://duckduckgo.com/i/fe0eb4d1.png" alt="My Unicorn"></p>
+<p><img src="http://i.imgur.com/XdCS1TL.png" alt="My RedditRegister"></p>
       </section>
     </div>
 
