--- a/index.html
+++ b/index.html
@@ -73,10 +73,29 @@ node app.js
 
 <ol>
 <li>A Reddit Account</li>
-<li>A Reddit App</li>
+<li>A Reddit App
+To get a Reddit Account, head over to <a href="http://www.reddit.com">www.reddit.com</a> and click register in the top right :</li>
 </ol>
 
 <p><img src="http://i.imgur.com/XdCS1TL.png" alt="My RedditRegister"></p>
+
+<p>Follow the instructions to create your account :</p>
+
+<p><img src="http://i.imgur.com/6tvC9UX.png" alt="My RedditRegisterScreen"></p>
+
+<p>After you log in to your account, you need to set up a reddit app. Click the preferences button in the top right:  </p>
+
+<p><img src="http://i.imgur.com/Pg3wTHi.png" alt="My RedditPreferences"></p>
+
+<p>In preferences click the apps tab:  </p>
+
+<p><img src="http://i.imgur.com/32gX6rD.png" alt="My RedditAppTab"></p>
+
+<p>Fill out the app information and choose script as the type:  </p>
+
+<p><img src="http://i.imgur.com/Hn6D14r.png" alt="My RedditAppComplete"></p>
+
+<p>Once your app is created your app-Id and app-secret will show up under the apps tab. These are what you will use to configure the redditbot in config.js:  </p>
       </section>
     </div>
 
