Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -73,9 +73,11 @@ node app.js
 
 <ol>
 <li>A Reddit Account</li>
-<li>A Reddit App
-To get a Reddit Account, head over to <a href="http://www.reddit.com">www.reddit.com</a> and click register in the top right :</li>
+<li>A Reddit App<br>
+</li>
 </ol>
+
+<p>To get a Reddit Account, head over to <a href="http://www.reddit.com">www.reddit.com</a> and click register in the top right :</p>
 
 <p><img src="http://i.imgur.com/XdCS1TL.png" alt="My RedditRegister"></p>
 
