Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@ node app.js
 
 <p>To get a Reddit Account, head over to <a href="http://www.reddit.com">www.reddit.com</a> and click register in the top right:</p>
 
-<p><img src="http://i.imgur.com/XdCS1TL.png" alt="My RedditRegister"></p>
+<p><img src="http://i.imgur.com/XdCS1TL.png%20=333x200" alt="My RedditRegister"></p>
 
 <p>Follow the instructions to create your account :</p>
 
-<p><img src="http://i.imgur.com/6tvC9UX.png" alt="My RedditRegisterScreen"></p>
+<p><img src="http://i.imgur.com/6tvC9UX.png%20=333x200" alt="My RedditRegisterScreen"></p>
 
 <p>After you log in to your account, you need to set up a reddit app. Click the preferences button in the top right:  </p>
 
