Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ node app.js
 
 <p>To get a Reddit Account, head over to <a href="http://www.reddit.com">www.reddit.com</a> and click register in the top right:</p>
 
-<p><img width="200"><img src="http://i.imgur.com/XdCS1TL.png" alt="My RedditRegister"></p>
+<p><img src="http://i.imgur.com/XdCS1TL.png" width="200&lt;/IMG"></p>
 
 <p>Follow the instructions to create your account :</p>
 
