Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -82,15 +82,15 @@ node app.js
 
 <p><img src="http://i.imgur.com/6tvC9UX.png" alt="My RedditRegisterScreen" height="350" width="400"></p>
 
-<p>After you log in to your account, you need to set up a reddit app. Click the preferences button in the top right:  </p>
+<p>After you log in to your account, you need to set up a reddit app. Click the <strong>preferences</strong> button in the top right:  </p>
 
 <p><img src="http://i.imgur.com/Pg3wTHi.png" alt="My RedditPreferences"></p>
 
-<p>In preferences click the apps tab:  </p>
+<p>In preferences click the <strong>apps</strong> tab:  </p>
 
 <p><img src="http://i.imgur.com/32gX6rD.png" alt="My RedditAppTab"></p>
 
-<p>Fill out the app information and choose script as the type:  </p>
+<p>Fill out the app information and choose <strong>script</strong> as the type:  </p>
 
 <p><img src="http://i.imgur.com/Hn6D14r.png" alt="My RedditAppComplete"></p>
 
