Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ node app.js
 </li>
 </ol>
 
-<p>To get a Reddit Account, head over to <a href="http://www.reddit.com">www.reddit.com</a> and click register in the top right:</p>
+<p>To get a Reddit Account, head over to <a href="http://www.reddit.com">www.reddit.com</a> and click <strong>register</strong> in the top right:</p>
 
 <p><img src="http://i.imgur.com/XdCS1TL.png" height="200" width="600"></p>
 
@@ -86,7 +86,7 @@ node app.js
 
 <p><img src="http://i.imgur.com/Pg3wTHi.png" alt="My RedditPreferences"></p>
 
-<p>In preferences click the <strong>apps</strong> tab:  </p>
+<p>In preferences, click the <strong>apps</strong> tab:  </p>
 
 <p><img src="http://i.imgur.com/32gX6rD.png" alt="My RedditAppTab"></p>
 
@@ -95,6 +95,8 @@ node app.js
 <p><img src="http://i.imgur.com/Hn6D14r.png" alt="My RedditAppComplete"></p>
 
 <p>Once your app is created your app-Id and app-secret will show up under the apps tab. These are what you will use to configure the redditbot in config.js:  </p>
+
+<p><img src="http://i.imgur.com/fZfmnlz.png"></p>
         </section>
 
         <aside id="sidebar">
