Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <ul>
 <li>   Twitter</li>
-<li>   <a href="#RedditConfiguration">Reddit</a>
+<li>   <a href="#RedditConfiguration">Reddit</a> <a href="https://github.com/Pippp/sjcx-tipbot/wiki/RedditBot-Configuration">Configure the bot</a>
 </li>
 <li>   IRC</li>
 <li>   Slack</li>
