Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
           <h1>
 <a id="sjcx-tipbot" class="anchor" href="#sjcx-tipbot" aria-hidden="true"><span class="octicon octicon-link"></span></a>Sjcx-tipbot</h1>
 
-<p>Tip anyone with SJCX, the coin used in <a href="http://storj.io/">http://storj.io/</a>. For security and lower server demands there is no bitcoin/counterparty node on the server. All the blockchain information is collected from blockchain.info and blockscan.com. All withdrawal requests are downloaded and handled on a separate system. Another benefit is that there is no BTC fee for tips.</p>
+<p>Tip anyone with SJCX, the coin used in <a href="http://storj.io/">http://storj.io/</a>. For security and lower server demands there is no bitcoin/counterparty node on the server. All the blockchain information is collected from blockchain.info and blockscan.com. All withdrawal requests are downloaded and handled on a separate system. Another benefit is that there is no BTC fee for tips.  Click on a platform for configuration details. </p>
 
 <h3>
 <a id="currently-supported-platforms" class="anchor" href="#currently-supported-platforms" aria-hidden="true"><span class="octicon octicon-link"></span></a>Currently Supported Platforms</h3>
 
 <ul>
 <li>   Twitter</li>
-<li>   <a href="#RedditConfiguration">Reddit</a> <a href="https://github.com/Pippp/sjcx-tipbot/wiki/RedditBot-Configuration">Configure the bot</a>
+<li>   <a href="https://github.com/Pippp/sjcx-tipbot/wiki/RedditBot-Configuration">Reddit</a>
 </li>
 <li>   IRC</li>
 <li>   Slack</li>
@@ -63,41 +63,6 @@ npm install
 Enter your bot credentials in config.js
 node app.js
 </code></pre>
-
-<h3>
-<a id="configuring-the-bots" class="anchor" href="#configuring-the-bots" aria-hidden="true"><span class="octicon octicon-link"></span></a>Configuring the bots</h3>
-
-<p><a name="RedditConfiguration"></a><strong>Reddit</strong> - To configure the reddit bot you need 2 things: </p>
-
-<ol>
-<li>A Reddit Account</li>
-<li>A Reddit App<br>
-</li>
-</ol>
-
-<p>To get a Reddit Account, head over to <a href="http://www.reddit.com">www.reddit.com</a> and click <strong>register</strong> in the top right:</p>
-
-<p><img src="http://i.imgur.com/XdCS1TL.png" height="200" width="600"></p>
-
-<p>Follow the instructions to create your account :</p>
-
-<p><img src="http://i.imgur.com/6tvC9UX.png" alt="My RedditRegisterScreen" height="350" width="400"></p>
-
-<p>After you log in to your account, you need to set up a reddit app. Click the <strong>preferences</strong> button in the top right:  </p>
-
-<p><img src="http://i.imgur.com/Pg3wTHi.png" alt="My RedditPreferences"></p>
-
-<p>In preferences, click the <strong>apps</strong> tab:  </p>
-
-<p><img src="http://i.imgur.com/32gX6rD.png" alt="My RedditAppTab"></p>
-
-<p>Fill out the app information and choose <strong>script</strong> as the type:  </p>
-
-<p><img src="http://i.imgur.com/Hn6D14r.png" alt="My RedditAppComplete"></p>
-
-<p>Once your app is created your app-Id and app-secret will show up under the apps tab. These are what you will use to configure the redditbot in config.js:  </p>
-
-<p><img src="http://i.imgur.com/fZfmnlz.png"></p>
         </section>
 
         <aside id="sidebar">
