Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <h1>
 <a id="sjcx-tipbot" class="anchor" href="#sjcx-tipbot" aria-hidden="true"><span class="octicon octicon-link"></span></a>Sjcx-tipbot</h1>
 
-<p>Tip anyone with SJCX, the coin used in <a href="http://storj.io/">http://storj.io/</a>. For security and lower server demands there is no bitcoin/counterparty node on the server. All the blockchain information is collected from blockchain.info and blockscan.com. All withdrawal requests are downloaded and handled on a separate system. Another benefit is that there is no BTC fee for tips.  Click on a platform for configuration details. </p>
+<p>Tip anyone with SJCX, the coin used in <a href="http://storj.io/">http://storj.io/</a>. For security and lower server demands there is no bitcoin/counterparty node on the server. All the blockchain information is collected from blockchain.info and blockscan.com. All withdrawal requests are downloaded and handled on a separate system. Another benefit is that there is no BTC fee for tips.  <strong>Click on a platform for configuration details</strong>. </p>
 
 <h3>
 <a id="currently-supported-platforms" class="anchor" href="#currently-supported-platforms" aria-hidden="true"><span class="octicon octicon-link"></span></a>Currently Supported Platforms</h3>
