Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -37,11 +37,14 @@
 <a id="currently-supported-platforms" class="anchor" href="#currently-supported-platforms" aria-hidden="true"><span class="octicon octicon-link"></span></a>Currently Supported Platforms</h3>
 
 <ul>
-<li>   Twitter</li>
+<li>   <a href="https://github.com/Pippp/sjcx-tipbot/wiki/Twitter-Configuration">Twitter</a>
+</li>
 <li>   <a href="https://github.com/Pippp/sjcx-tipbot/wiki/RedditBot-Configuration">Reddit</a>
 </li>
-<li>   IRC</li>
-<li>   Slack</li>
+<li>   <a href="https://github.com/Pippp/sjcx-tipbot/wiki/IRC-Configuration">IRC</a>
+</li>
+<li>   <a href="https://github.com/Pippp/sjcx-tipbot/wiki/Slack-Configuration">Slack</a>
+</li>
 </ul>
 
 <h3>
